# rusty-shazam

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/analyzer/: mod.rs  recorder.rs
src/app/: mod.rs
src/fingerprint/: id.rs  mod.rs  recorder.rs  transformation.rs
src/reader/: mod.rs
src/style/: dark.rs  mod.rs
src/uploader/: mod.rs
src/web/: mod.rs
