[package]
name = "rusty-shazam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
cpal = "0.13.4"
iced = "0.3.0"
csv = "1.1.6"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.14.0", features = ["full"] }
futures = { version="0.3.18", features=["executor"] }
itertools = "0.10.3"