[package]
name = "rusty-shazam"
version = "0.1.0"
edition = "2018"

[dependencies]
rustfft = "6.0.1"
cpal = "0.13.4"
iced = "0.3.0"
csv = "1.1.6"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
itertools = "0.10.3"
surf = "2.3.2"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"]